--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Klasha Ionic App </title>
+  <title>Klasha Ionic Angular App </title>
 
   <base href="/" />
 
